<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:text="@string/intro"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/capture_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/capture" />
       
        <Button
            android:id="@+id/capFile_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/capFromFile" />

        <Button
            android:id="@+id/bin_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bin" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/picture"
            android:layout_width="wrap_content"
            android:layout_height="180dp"
            android:layout_weight="0.54"
            android:background="@drawable/pic_border"
            android:contentDescription="@string/picture" />
        <ImageView
            android:id="@+id/picture2"
            android:layout_width="wrap_content"
            android:layout_height="180dp"
            android:layout_weight="0.54"
            android:background="@drawable/pic_border"
            android:contentDescription="@string/picture" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <Button
            android:id="@+id/ant_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ant" />
        	
        <Button
            android:id="@+id/prox_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prox" />
        
    </LinearLayout>

</LinearLayout>